[package]
name = "atlas-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

serialize_serde = ["atlas-core/serialize_serde", "atlas-communication/serialize_serde", "atlas-execution/serialize_serde",
    "atlas-common/serialize_serde"]
serialize_capnp = ["atlas-core/serialize_capnp", "atlas-execution/serialize_capnp", "atlas-communication/serialize_capnp"]

default = ["serialize_serde"]

[dependencies]
log = "*"
intmap = "*"
futures-timer = "*"
num_cpus = "*"
atlas-communication = { path = "../atlas-communication" }
atlas-smr-application = { path = "../atlas-smr-application" }
atlas-common = { path = "../atlas-common" }
atlas-core = { path = "../atlas-core" }
atlas-metrics = {path = "../atlas-metrics" }
atlas-reconfiguration = {path = "../atlas-reconfiguration" }